<resources>
    <string name="app_name">TabooDroid</string>
    <string name="loading_finished">Successfully loaded file \"%s\" (%s) with %d tasks.</string>
    <string name="start_timer">start</string>
    <string name="settings_action">Settings</string>
    <string name="timer_duration_setting">Timer duration in s</string>
    <string name="enable_timer_setting">Enable timer</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="reset_action">Reset score</string>
    <string name="number_of_blocked_words_settings">Blocked words</string>
    <string name="number_of_blocked_words_summary">Choose, how many words cannot be used to explain: %s</string>
    <string name="choose_task_file">Choose task-file</string>
    <string name="task_file_header_display">%s (%s)</string>
    <string name="choose_task_file_summary">Choose a file containing the words to guess and the blocked words.</string>
    <string name="generate_tasks">Generate Task</string>
    <string name="generate_tasks_summary">Choose mode of generating random task out of task file.</string>
    <string name="taboo_button">Taboo</string>
    <string name="skip_button">skip</string>
    <string name="next_button">next</string>
    <string name="number_of_words">%d words</string>
    <string name="vibration">Vibration</string>
    <string name="skip_setting_title">Skipable words</string>
    <string name="skip_setting_summary">Number of words allowed to skip per round without influencing the score: %s</string>
    <string name="about_action">About</string>
    <string name="timer">Timer</string>
    <string name="tasks">Tasks</string>
    <string name="other">Other</string>
    <string name="team_explaining">%s turn</string>
    <string name="round_counter">round %d</string>
    <string name="number_of_teams">Number of teams</string>
</resources>