<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory>
        <SwitchPreference
            android:defaultValue="true"
            android:key="enable_timer"
            android:summary="@string/enabled"
            android:summaryOff="@string/disabled"
            android:title="@string/enable_timer_setting" />
        <SeekBarPreference
            android:key="timer_duration"
            android:max="180"
            android:title="@string/timer_duration_setting"
            app:defaultValue="60"
            app:min="10"
            app:showSeekBarValue="true" />
    </PreferenceCategory>
    <PreferenceCategory>
        <ListPreference
            android:defaultValue="fill"
            android:entries="@array/task_generation"
            android:entryValues="@array/task_generation_values"
            android:key="task_generation"
            android:summary="@string/generate_tasks_summary"
            android:title="@string/generate_tasks" />
        <ListPreference
            android:defaultValue="5"
            android:key="number_of_blocked_words"
            android:summary="@string/number_of_blocked_words_summary"
            android:title="@string/number_of_blocked_words_settings" />
        <ListPreference
            android:key="choose_task_file"
            android:summary="@string/choose_task_file_summary"
            android:title="@string/choose_task_file" />
    </PreferenceCategory>
    <PreferenceCategory>
        <SwitchPreference
            android:defaultValue="true"
            android:key="vibrate"
            android:summary="@string/enabled"
            android:summaryOff="@string/disabled"
            android:title="@string/vibration" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/skip_settings"
            android:entryValues="@array/skip_settings_values"
            android:key="skip"
            android:summary="@string/skip_setting_summary"
            android:title="@string/skip_setting_title" />
    </PreferenceCategory>
</PreferenceScreen>